Fix some layout problems

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,6 +75,7 @@ body {
 
 .flex-box {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
@@ -243,6 +244,7 @@ header {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -257,8 +259,6 @@ nav li a {
   font-family: "nexaBold", sans-serif;
   text-align: center;
   text-decoration: none;
-  border: 1px solid #ccc;
-  border-width: 0 1px;
   padding: 25px;
   transition: opacity 0.6s;
 }
@@ -267,12 +267,26 @@ nav li a:hover {
   opacity: 0.6;
 }
 
+.qtdItensCart {
+  font-size: 13px;
+  color: #fff;
+  margin-left: 8px;
+  background-color: var(--main);
+  height: 25px;
+  width: 25px;
+  line-height: 28px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
 /* Fim cabeçalho */
 
 /* Carrinho */
 
 .itemCart {
   display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
   background-color: #eee;
   padding: 20px;
   margin: 15px 0;
@@ -289,6 +303,7 @@ nav li a:hover {
 
 .itemBtns {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 10px;
 }
